--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.7.4",
+    "ng2-bs3-modal": "^0.10.4",
     "rxjs": "^5.1.0",
     "typings": "^2.1.0",
     "zone.js": "^0.7.6"
