--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
-    "angular2-contextmenu": "^0.8.2",
     "angular2-localstorage": "^0.4.0",
     "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
     "firebase": "^3.7.4",
     "ng2-bs3-modal": "^0.10.4",
+    "ngx-contextmenu": "^1.1.0",
     "rxjs": "^5.1.0",
     "typings": "^2.1.0",
     "zone.js": "^0.7.6"
